--- a/backend/weblog-parser/pom.xml
+++ b/backend/weblog-parser/pom.xml
@@ -12,12 +12,30 @@
     <artifactId>weblog-parser</artifactId>
 
     <dependencies>
+        <!--源码的位置为：https://github.com/haraldwalker/user-agent-utils -->
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.21</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hjd</groupId>
+            <artifactId>weblog-preparser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
